Updating Twenty Nineteen, the new default theme for 2019.
This change adds general code quality and documentation improvements. 

- More info here: https://github.com/WordPress/twentynineteen/pull/546

Props grapplerulrich, iCaleb.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44187 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentynineteen/style-rtl.css
+++ b/src/wp-content/themes/twentynineteen/style-rtl.css
@@ -1604,6 +1604,7 @@ body.page .main-navigation {
   display: block;
   width: 32px;
   height: 32px;
+  transform: translateZ(0);
 }
 
 .social-navigation ul.social-links-menu li a svg#ui-icon-link {
