--- a/src/wp-content/themes/twentyten/blocks.css
+++ b/src/wp-content/themes/twentyten/blocks.css
@@ -204,42 +204,52 @@ p.has-drop-cap:not(:focus)::first-letter {
 6.0 Blocks - Colors
 --------------------------------------------------------------*/
 
-.has-blue-color {
+.has-blue-color,
+.has-blue-color:visited {
 	color: #0066cc;
 }
 
-.has-blue-background-color {
+.has-blue-background-color,
+.has-blue-background-color:visited {
 	background-color: #0066cc;
 }
 
-.has-black-color {
+.has-black-color,
+.has-black-color:visited {
 	color: #000;
 }
 
-.has-black-background-color {
+.has-black-background-color,
+.has-black-background-color:visited {
 	background-color: #000;
 }
 
-.has-medium-gray-color {
+.has-medium-gray-color,
+.has-medium-gray-color:visited {
 	color: #666;
 }
 
-.has-medium-gray-background-color {
+.has-medium-gray-background-color,
+.has-medium-gray-background-color:visited {
 	background-color: #666;
 }
 
-.has-light-gray-color {
+.has-light-gray-color,
+.has-light-gray-color:visited {
 	color: #f1f1f1;
 }
 
-.has-light-gray-background-color {
+.has-light-gray-background-color,
+.has-light-gray-background-color:visited {
 	background-color: #f1f1f1;
 }
 
-.has-white-color {
+.has-white-color,
+.has-white-color:visited {
 	color: #fff;
 }
 
-.has-white-background-color {
+.has-white-background-color,
+.has-white-background-color:visited {
 	background-color: #fff;
 }
