Twenty Eleven: Correct block editor `font-size` issue.
Update a mistake in Twenty Eleven's block editor styles that erroneously sets the `font-size` to `300`, when it should set the `font-weight` to `300`. This was causing browsers in quirks mode to make the editor font size very large. 

Fixes #45421.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44190 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyeleven/editor-blocks.css
+++ b/src/wp-content/themes/twentyeleven/editor-blocks.css
@@ -23,7 +23,7 @@ Description: Used to style Gutenberg Blocks in the editor.
 .editor-default-block-appender input[type="text"].editor-default-block-appender__content {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 15px;
-	font-size: 300;
+	font-weight: 300;
 	line-height: 1.625;
 }
 
