--- a/src/wp-content/themes/twentyeleven/blocks.css
+++ b/src/wp-content/themes/twentyeleven/blocks.css
@@ -232,14 +232,12 @@ p.has-drop-cap:not(:focus)::first-letter {
 /* Buttons */
 
 .wp-block-button .wp-block-button__link {
-	background: #222;
 	border: none;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	-webkit-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
 	-moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
 	box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
-	color: #eee;
 	cursor: pointer;
 	font-size: 15px;
 	margin: 20px 0;
@@ -247,7 +245,12 @@ p.has-drop-cap:not(:focus)::first-letter {
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 }
 
-.wp-block-button .wp-block-button__link:active {
+.wp-block-button__link {
+	background: #222;
+	color: #eee;
+}
+
+.wp-block-button__link:active {
 	background: #1982d1;
 	color: #bfddf3;
 }
