--- a/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -324,6 +324,7 @@
 			margin-top: calc(4 * #{ $size__spacing-unit});
 			margin-bottom: calc(4.33 * #{ $size__spacing-unit});
 			margin-right: 0;
+			padding-left: 0;
 		}
 
 		p {
@@ -577,6 +578,10 @@
 		.blocks-gallery-image:last-child,
 		.blocks-gallery-item:last-child {
 			margin-bottom: 16px;
+		}
+
+		figcaption a {
+			color: #fff;
 		}
 	}
 
