Twenty Fifteen: Fix button block custom colors on front end.
Simplify some of the button block’s CSS selectors in the theme, to make sure the default colors don’t override the custom colors on the front end.

Fixes #45428.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44198 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyfifteen/css/blocks.css
+++ b/src/wp-content/themes/twentyfifteen/css/blocks.css
@@ -384,10 +384,8 @@ p.has-drop-cap:not(:focus)::first-letter {
 /* Button */
 
 .wp-block-button .wp-block-button__link {
-	background-color: #333;
 	border: 0;
 	border-radius: 0;
-	color: #fff;
 	cursor: pointer;
 	font-family: "Noto Sans", sans-serif;
 	font-size: 12px;
@@ -399,11 +397,16 @@ p.has-drop-cap:not(:focus)::first-letter {
 	vertical-align: baseline;
 }
 
-.wp-block-button .wp-block-button__link:hover,
-.wp-block-button .wp-block-button__link:focus {
+.wp-block-button__link {
+	background-color: #333;
+	color: #fff;
+}
+
+.wp-block-button__link:hover,
+.wp-block-button__link:focus {
 	background-color: #707070;
 	background-color: rgba(51, 51, 51, 0.7);
-	outline: 0;
+	color: #fff;
 }
 
 @media screen and (min-width: 46.25em) {
