--- a/src/wp-content/themes/twentysixteen/css/blocks.css
+++ b/src/wp-content/themes/twentysixteen/css/blocks.css
@@ -232,10 +232,8 @@ p.has-drop-cap:not(:focus)::first-letter {
 /* Buttons */
 
 .wp-block-button .wp-block-button__link {
-	background: #1a1a1a;
 	border: 0;
 	border-radius: 2px;
-	color: #fff;
 	font-family: Montserrat, "Helvetica Neue", sans-serif;
 	font-weight: 700;
 	letter-spacing: 0.046875em;
@@ -244,9 +242,15 @@ p.has-drop-cap:not(:focus)::first-letter {
 	text-transform: uppercase;
 }
 
-.wp-block-button .wp-block-button__link:hover,
-.wp-block-button .wp-block-button__link:focus {
+.entry-content .wp-block-button__link {
+	background: #1a1a1a;
+	color: #fff;
+}
+
+.entry-content .wp-block-button__link:hover,
+.entry-content .wp-block-button__link:focus {
 	background: #007acc;
+	color: #fff;
 }
 
 .wp-block-button .wp-block-button__link:focus {
@@ -322,98 +326,98 @@ hr.wp-block-separator {
 6.0 Blocks - Colors
 --------------------------------------------------------------*/
 
-.has-dark-gray-color {
+.entry-content .has-dark-gray-color {
 	color: #1a1a1a;
 }
 
-.has-dark-gray-background-color {
+.entry-content .has-dark-gray-background-color {
 	background-color: #1a1a1a;
 }
 
-.has-medium-gray-color {
+.entry-content .has-medium-gray-color {
 	color: #686868;
 }
 
-.has-medium-gray-background-color {
+.entry-content .has-medium-gray-background-color {
 	background-color: #686868;
 }
 
-.has-light-gray-color {
+.entry-content .has-light-gray-color {
 	color: #e5e5e5;
 }
 
-.has-light-gray-background-color {
+.entry-content .has-light-gray-background-color {
 	background-color: #e5e5e5;
 }
 
-.has-white-color {
+.entry-content .has-white-color {
 	color: #fff;
 }
 
-.has-white-background-color {
+.entry-content .has-white-background-color {
 	background-color: #fff;
 }
 
-.has-blue-gray-color {
+.entry-content .has-blue-gray-color {
 	color: #4d545c;
 }
 
-.has-blue-gray-background-color {
+.entry-content .has-blue-gray-background-color {
 	background-color: #4d545c;
 }
 
-.has-bright-blue-color {
+.entry-content .has-bright-blue-color {
 	color: #007acc;
 }
 
-.has-bright-blue-background-color {
+.entry-content .has-bright-blue-background-color {
 	background-color: #007acc;
 }
 
-.has-light-blue-color {
+.entry-content .has-light-blue-color {
 	color: #9adffd;
 }
 
-.has-light-blue-background-color {
+.entry-content .has-light-blue-background-color {
 	background-color: #9adffd;
 }
 
-.has-dark-brown-color {
+.entry-content .has-dark-brown-color {
 	color: #402b30;
 }
 
-.has-dark-brown-background-color {
+.entry-content .has-dark-brown-background-color {
 	background-color: #402b30;
 }
 
-.has-medium-brown-color {
+.entry-content .has-medium-brown-color {
 	color: #774e24;
 }
 
-.has-medium-brown-background-color {
+.entry-content .has-medium-brown-background-color {
 	background-color: #774e24;
 }
 
-.has-dark-red-color {
+.entry-content .has-dark-red-color {
 	color: #640c1f;
 }
 
-.has-dark-red-background-color {
+.entry-content .has-dark-red-background-color {
 	background-color: #640c1f;
 }
 
-.has-bright-red-color {
+.entry-content .has-bright-red-color {
 	color: #ff675f;
 }
 
-.has-bright-red-background-color {
+.entry-content .has-bright-red-background-color {
 	background-color: #ff675f;
 }
 
-.has-yellow-color {
+.entry-content .has-yellow-color {
 	color: #ffef8e;
 }
 
-.has-yellow-background-color {
+.entry-content .has-yellow-background-color {
 	background-color: #ffef8e;
 }
