Twenty Nineteen: Fixes and improvements.
This commit fixes the final differences between the version of Twenty Nineteen in core and the one in GitHub. The two are now identical.

See #45424.

git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44202 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentynineteen/style-editor.scss
+++ b/src/wp-content/themes/twentynineteen/style-editor.scss
@@ -294,12 +294,15 @@ figcaption,
 	.wp-block-cover {
 		width: 100%;
 		max-width: 100%;
-	}
+		padding: calc(1.375 * #{$size__spacing-unit});
 
-	@include media(tablet) {
+		p {
+			padding-left: 0;
+			padding-right: 0;
+		}
 
-		.wp-block-cover {
-			padding: $size__spacing-unit;
+		@include media(tablet) {
+			padding: calc(2.75 * #{$size__spacing-unit}) calc(2.75 * #{$size__spacing-unit}) calc(3.125 * #{$size__spacing-unit});
 		}
 	}
 }
