Twenty Seventeen: Add focus style to cookies consent checkbox.
To improve accessibility, the cookies content checkbox in the comment form needed some visible indication when it’s in focus. 

Props pratikthink, afercia.
Fixes #44699.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44204 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyseventeen/style.css
+++ b/src/wp-content/themes/twentyseventeen/style.css
@@ -982,6 +982,11 @@ select {
 	max-width: 100%;
 }
 
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+	outline: thin dotted #333;
+}
+
 input[type="radio"],
 input[type="checkbox"] {
 	margin-right: 0.5em;
