Bundled Themes: Update default block appender selector.
The markup for the default block appender changed from a text input to a text area in the editor; this update makes the same change in the default theme styles.

Fixes #45450.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44212 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
+++ b/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
@@ -20,12 +20,12 @@ Description: Used to style Gutenberg Blocks in the editor.
 --------------------------------------------------------------*/
 
 .edit-post-visual-editor .editor-block-list__block,
-.editor-default-block-appender input[type="text"].editor-default-block-appender__content {
+.editor-default-block-appender textarea.editor-default-block-appender__content {
 	font-size: 15px;
 	font-size: 0.9375rem;
 }
 
-.editor-default-block-appender input[type="text"].editor-default-block-appender__content {
+.editor-default-block-appender textarea.editor-default-block-appender__content {
 	font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
