--- a/src/wp-content/themes/twentythirteen/css/editor-blocks.css
+++ b/src/wp-content/themes/twentythirteen/css/editor-blocks.css
@@ -28,7 +28,7 @@ Description: Used to style Gutenberg Blocks in the editor.
 
 .edit-post-visual-editor .editor-block-list__block,
 .edit-post-visual-editor .editor-block-list__block p,
-.editor-default-block-appender input[type="text"].editor-default-block-appender__content {
+.editor-default-block-appender textarea.editor-default-block-appender__content {
 	font-family: "Source Sans Pro", Helvetica, sans-serif;
 	font-size: 16px;
 	font-weight: 400;
