Bundled Themes: Replace “Gutenberg” in code comments and classes.
This update replaces the term “Gutenberg” in the themes code comments and classes with something more future-friendly.

Fixes #45452.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44213 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyeleven/editor-blocks.css
+++ b/src/wp-content/themes/twentyeleven/editor-blocks.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Twenty Eleven
-Description: Used to style Gutenberg Blocks in the editor.
+Description: Used to style blocks in the editor.
 */
 
 /*--------------------------------------------------------------
