--- a/src/wp-content/themes/twentyeleven/blocks.css
+++ b/src/wp-content/themes/twentyeleven/blocks.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Twenty Eleven
-Description: Used to style Gutenberg Blocks.
+Description: Used to style blocks.
 */
 
 /*--------------------------------------------------------------
