Twenty Seventeen: Update `font-family` for Simplified Chinese (zh_CN).
Fix the `font-family` used for Simplified Chinese (zh_CN) in the block editor CSS.

Props vaishalipanchal, ze3kr.
Fixes #45408.



git-svn-id: https://develop.svn.wordpress.org/branches/5.0@44235 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
+++ b/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
@@ -155,9 +155,12 @@ html[lang="ur"] .edit-post-visual-editor h6 {
 
 /* Typography for Chinese Font */
 
-html[lang^="zh-"] .edit-post-visual-editor .editor-block-list__block,
-html[lang="zh-CN"] .edit-post-visual-editor .editor-block-list__block {
+html[lang^="zh-"] .edit-post-visual-editor .editor-block-list__block {
 	font-family: "PingFang TC", "Helvetica Neue", Helvetica, STHeitiTC-Light, Arial, sans-serif;
+}
+
+html[lang="zh-CN"] .edit-post-visual-editor .editor-block-list__block {
+	font-family: "PingFang SC", "Helvetica Neue", Helvetica, STHeitiSC-Light, Arial, sans-serif;
 }
 
 html[lang^="zh-"] .edit-post-visual-editor h1,
