Twenty Nineteen: Fixes and improvements.
This commit brings over several changes that occurred upstream in the theme’s GitHub repository into core.

- Fix the gallery caption link color. https://github.com/WordPress/twentynineteen/pull/687
- Remove left padding from pullquote blocks. https://github.com/WordPress/twentynineteen/pull/690
- Print `skip-link-focus-fix` inline instead of enqueueing as blocking script. https://github
.com/WordPress/twentynineteen/pull/47
- Fix and improve some strings with placeholders. https://github.com/WordPress/twentynineteen/pull/217
- Fixes some minor code quality issues. https://github.com/WordPress/twentynineteen/pull/237
- Fix PHP Warning: Parameter must be an array or an object that implements Countable. https://github
.com/WordPress/twentynineteen/pull/661
- Add missing text domain and escaping to comment author text. https://github.com/WordPress/twentynineteen/pull/274
- Remove hyphens rule for cover image text. https://github.com/WordPress/twentynineteen/pull/691
- Fix left/right-aligned pullquote spacing. https://github.com/WordPress/twentynineteen/pull/695
- Improve `readme.txt` to follow the correct standards for themes. https://github.com/WordPress/twentynineteen/issues/689

Props kjellr, allancole, dimadin, westonruter, khleomix, grapplerulrich, iCaleb, desrosj.

Merges [44196], [44199], and [44201-44202] into trunk.

Fixes #45424.

git-svn-id: https://develop.svn.wordpress.org/trunk@44305 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -324,6 +324,7 @@
 			margin-top: calc(4 * #{ $size__spacing-unit});
 			margin-bottom: calc(4.33 * #{ $size__spacing-unit});
 			margin-right: 0;
+			padding-left: 0;
 		}
 
 		p {
@@ -362,10 +363,14 @@
 			padding: 0;
 
 			blockquote {
-				margin-left: 0;
+				margin: $size__spacing-unit 0;
 				padding: 0;
 				text-align: left;
 				max-width: 100%;
+
+				p:first-child {
+					margin-top: 0;
+				}
 			}
 		}
 
@@ -399,10 +404,11 @@
 			}
 
 			blockquote {
-				max-width: calc(100% - (2 * #{$size__spacing-unit}));
+				max-width: 100%;
 				color: $color__background-body;
 				padding-left: 0;
 				margin-left: $size__spacing-unit;
+				margin-right: $size__spacing-unit;
 
 				&.has-text-color p,
 				&.has-text-color a,
@@ -417,6 +423,14 @@
 				@include media(tablet) {
 					margin-left: 0;
 					margin-right: 0;
+				}
+			}
+
+			&.alignright,
+			&.alignleft {
+
+				@include media(tablet) {
+					padding: $size__spacing-unit calc(2 * #{$size__spacing-unit});
 				}
 			}
 
@@ -528,10 +542,6 @@
 			line-height: 1.25;
 			padding: 0;
 			color: #fff;
-			-ms-hyphens: auto;
-			-moz-hyphens: auto;
-			-webkit-hyphens: auto;
-			hyphens: auto;
 
 			@include media(tablet) {
 				font-size: $font__size-xl;
@@ -544,7 +554,7 @@
 			width: 100%;
 
 			@include media(tablet) {
-				padding: $size__spacing-unit;
+				padding: $size__spacing-unit calc(2 * #{$size__spacing-unit});
 			}
 		}
 
@@ -577,6 +587,10 @@
 		.blocks-gallery-image:last-child,
 		.blocks-gallery-item:last-child {
 			margin-bottom: 16px;
+		}
+
+		figcaption a {
+			color: #fff;
 		}
 	}
 
