Bundled Themes: Replace “Gutenberg” in code comments and classes.
This update replaces the term “Gutenberg” in the themes code comments and classes with something more future-friendly.

Props laurelfulford.

Merges [44213] into trunk.

Fixes #45452.

git-svn-id: https://develop.svn.wordpress.org/trunk@44313 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
+++ b/src/wp-content/themes/twentyseventeen/assets/css/editor-blocks.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Twenty Seventeen
-Description: Used to style Gutenberg Blocks in the editor.
+Description: Used to style blocks in the editor.
 */
 
 /*--------------------------------------------------------------
@@ -359,12 +359,6 @@ html[lang="th"] .edit-post-visual-editor * {
 
 .wp-block {
 	max-width: 674px; /* Based on one-column post width; 644px + 30px to account for padding. */
-}
-
-/* Background color */
-
-.gutenberg-editor-page .editor-block-list__block {
-	background-color: transparent;
 }
 
 /* Alignments */
