Twenty Nineteen: Revert [44739] from the 5.1 branch.
Reverts block quote style changes intended for a later release.

See #46239.



git-svn-id: https://develop.svn.wordpress.org/branches/5.1@44743 602fd350-edb4-49c9-b593-d223f7449a82

--- a/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -452,8 +452,7 @@
 
 		&:not(.is-large),
 		&:not(.is-style-large) {
-			border-width: 2px;
-			border-color: $color__link;
+			border-left: 2px solid $color__link;
 			padding-top: 0;
 			padding-bottom: 0;
 		}
