--- a/src/wp-content/themes/twentynineteen/style-rtl.css
+++ b/src/wp-content/themes/twentynineteen/style-rtl.css
@@ -5477,8 +5477,7 @@ body.page .main-navigation {
 }
 
 .entry .entry-content .wp-block-quote:not(.is-large), .entry .entry-content .wp-block-quote:not(.is-style-large) {
-  border-width: 2px;
-  border-color: #0073aa;
+  border-right: 2px solid #0073aa;
   padding-top: 0;
   padding-bottom: 0;
 }
