--- a/src/wp-content/themes/twentynineteen/style.css
+++ b/src/wp-content/themes/twentynineteen/style.css
@@ -5663,8 +5663,7 @@ body.page .main-navigation {
 }
 
 .entry .entry-content .wp-block-quote:not(.is-large), .entry .entry-content .wp-block-quote:not(.is-style-large) {
-  border-width: 2px;
-  border-color: #0073aa;
+  border-left: 2px solid #0073aa;
   padding-top: 0;
   padding-bottom: 0;
 }
